console methods challenge

--- a/css-grid/payment-cards/css/styles.css
+++ b/css-grid/payment-cards/css/styles.css
@@ -35,7 +35,7 @@ body {
 
   /* Add styles to the container */
   display: grid;
-  grid-template: 1fr / 1fr 1fr 1fr;
+  grid-template: 1fr / repeat(3, 1fr);
   gap: 1rem;
 }
 
